[package]
name    = "borealis_codegen"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/martinrlilja/borealis"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
borealis = { path = "../borealis", features = ["nightly"] }
aster = "0.15"
quasi = "0.9"
quasi_macros = "0.9"
regex = "0.1"
regex_macros = "0.1"
string_cache = "0.2"
